--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # MySQL
 spring.datasource.username=admin
 spring.datasource.password=bnmmnb
-spring.datasource.url=dbc:mysql://localhost:3306/spring_01_hib?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/resrev?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -17,26 +17,3 @@ spring.mvc.view.suffix=.jsp
 logging.level.web=DEBUG
 logging.level.pl.jwn.resrev=DEBUG
 
-#<persistence xmlns="http://xmlns.jcp.org/xml/ns/persistence"
-#xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-#xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/persistence
-#http://xmlns.jcp.org/xml/ns/persistence/persistence_2_1.xsd"
-#version="2.1">
-#<persistence-unit name="spring_01_hib">
-#<properties>
-#<property name="javax.persistence.jdbc.url"
-#value="jdbc:mysql://localhost:3306/spring_01_hib?serverTimezone=UTC"/>
-#<property name="javax.persistence.jdbc.user" value="admin"/>
-#<property name="javax.persistence.jdbc.password" value="bnmmnb"/>
-#<property name="javax.persistence.jdbc.driver" value="com.mysql.cj.jdbc.Driver"/>
-#
-#<property name="hibernate.hbm2ddl.auto" value="create-drop"/>
-#<property name="hibernate.show_sql" value="true"/>
-#<property name="hibernate.format_sql" value="true"/>
-#
-#<property name="hibernate.dialect" value="org.hibernate.dialect.MySQL8Dialect" />
-#<property name="hibernate.connection.characterEncoding" value="utf8" />
-#
-#</properties>
-#</persistence-unit>
-#</persistence>
