Resztki do poprzedniego comitu. Generowanie prawdziwych UUID dla userow.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.mvc.view.suffix=.jsp
 logging.level.web=DEBUG
 logging.level.pl.jwn.resrev=DEBUG
 
+logging.level.org.springframework.security=DEBUG
+
