Encja artefact completna. Zmiana strefy czasowej JDBC z UTC na CET.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # MySQL
 spring.datasource.username=admin
 spring.datasource.password=bnmmnb
-spring.datasource.url=jdbc:mysql://localhost:3306/resrev?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/resrev?serverTimezone=CET&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
