--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-
+#TODO Eksternalizacja
 # MySQL
-spring.datasource.username=admin
-spring.datasource.password=bnmmnb
+spring.datasource.username=root
+spring.datasource.password=
 spring.datasource.url=jdbc:mysql://localhost:3306/resrev?serverTimezone=CET&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
